# stock-research-lab

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements-prod.txt
app/: __init__.py  config.py  main.py  orchestrator.py
app/adapters/: annual_report.py  blog_extractor.py  chart_image.py  fundamentals.py  market_yfinance.py  mfapi.py  news_rss.py  youtube_transcript.py
app/analysis/: __init__.py  confidence.py  events.py  health_score.py  indicators.py  ranking.py  risk_rules.py  sentiment.py  stance.py  stance_explainer.py  trend.py
app/api/: __init__.py  server.py
app/learn/: __init__.py  analyst_thinking.py  annual_report_analyzer.py  detector.py  glossary.py  lesson.py  patterns.py
app/llm/: __init__.py  guardrails.py  ollama_client.py  prompts.py  synthesis.py
app/reports/: render_learning.py  render_markdown.py
app/schemas/: __init__.py  evidence.py  input.py  output.py
app/storage/: __init__.py  cache.py  db.py  fts.py
app/ui/: __init__.py  charts.py  cli.py  streamlit_app.py
tests/: conftest.py  test_events.py  test_guardrails.py  test_indicators.py  test_orchestrator.py  test_patterns.py  test_sentiment.py  test_stance.py
web/: annual-report.html  dashboard.html  glossary.html  index.html  learn.html  quest.html
web/css/: cinematic.css  dashboard-journey.css  home-wow.css  home.css  styles.css
web/js/: annual-report.js  api.js  cinematic.js  dashboard-journey.js  dashboard.js  glossary.js  home-wow.js  home.js  landing.js  learn.js  quest.js
