[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research-assistant"
version = "0.1.0"
description = "Local-first stock research assistant using deterministic analytics + Ollama for explanation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Stock Research Assistant" }]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pandas-ta>=0.3.14b",
    "feedparser>=6.0.11",
    "trafilatura>=1.12",
    "youtube-transcript-api>=0.6.2",
    "streamlit>=1.36",
    "python-dotenv>=1.0",
    "Pillow>=10.3",
    "pytesseract>=0.3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
stock-research = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
